// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders <Button/> properly with defaultProps 1`] = `
<button
  class="Button-sc-19h6k31-0 jPzzbs"
>
  Test
</button>
`;

exports[`Renders <Button/> properly with secondary props 1`] = `
<button
  class="Button-sc-19h6k31-0 jBGxKG"
>
  Test
</button>
`;
